@@ -38,3 +38,4 @@
 ( cvs diff -u -r 1.1.2.40 -r 1.1.2.41 src/vcal_meeting_gtk.c;  ) > 1.89.0cvs1.patchset
 ( cvs diff -u -r 1.1.2.38 -r 1.1.2.39 src/vcal_manager.c;  cvs diff -u -r 1.1.2.41 -r 1.1.2.42 src/vcal_meeting_gtk.c;  ) > 1.89.0cvs2.patchset
 ( cvs diff -u -r -1.1.2.1 -r -1.1.2.2 config.h.in;  ) > 1.89.0cvs3.patchset
+( cvs diff -u -r 1.1.2.42 -r 1.1.2.43 src/vcal_meeting_gtk.c;  ) > 1.89.0cvs4.patchset
